fix: align ad blocker settings for small screens

--- a/src/options/setting.scss
+++ b/src/options/setting.scss
@@ -18,8 +18,10 @@
 		position: relative;
 
 		@include small-screen {
-			flex-direction: column;
-			align-items: flex-start;
+			&:not(#{&}--small) {
+				flex-direction: column;
+				align-items: flex-start;
+			}
 		}
 	}
 
